# aliasman-mac

./: Cargo.toml  IDEA.md  README.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v0.0.1-MILESTONE-AUDIT.md  v0.0.1-REQUIREMENTS.md  v0.0.1-ROADMAP.md
.planning/phases/01-rust-cli-foundation-and-alias-store/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-shell-detection-init-and-import/: 02-01-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-alias-crud-and-listing/: 03-01-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-history-stats-and-suggestions/: 04-01-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-claude-hook-integration/: 05-01-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/07-pack-foundation/: CONTEXT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
Formula/: aliasman.rb.tpl
builtin_packs/: docker-pack.toml  k8s-pack.toml
src/: history.rs  hook.rs  import.rs  lib.rs  main.rs  mcp.rs  model.rs  pack_installer.rs  pack_manager.rs  pack_manifest.rs  pack_registry.rs  search.rs  shell.rs  store.rs  validation.rs
tests/: crud_cli.rs  history_cli.rs  store_atomic.rs
(+9 files in other folders)
