[package]
name = "aliasman"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
chrono = { version = "0.4", features = ["clock"] }
dirs = "5"
thiserror = "2"
toml = "0.9"
serde_json = "1"
lancedb = "0.27"
arrow-array = "57"
arrow-schema = "57"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rmcp = { version = "1", features = ["server", "macros", "schemars"] }
schemars = "1"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
